--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasan-Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>Hello,I'm <samp class="gold"> Hasan</samp> </h1>
+            <h1>Welcome To <br><samp class="gold"> <b>Structure World!</b> </samp></h1>
+            <h3>I Create Website Not Just Art.</h3>
+            <p>Use first, then believe! If Not Now, When? Let's Work Together! I love to learn.I also love to work with
+                devotion and truth!Everytime you hare me,you will not disappoint.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mehedi-hasan-4a2861193/">HIRE
+                ME!</a>
+        </div>
+        <div class="half-width">
+            <img src="images/Mehedi.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
